--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -19,7 +19,7 @@ jobs:
           
       - name: Build ISO File
         run: |
-          su -s /bin/bash nobody -c "sudo chown nobody:nobody "/__w/holoiso_install_main/holoiso_install_main" && mkdir pkgout && export BUILDDIR=pkgout && makepkg -s"
+          su -s /bin/bash nobody -c "chown nobody:nobody "/__w/holoiso_install_main/holoiso_install_main" && mkdir pkgout && export BUILDDIR=pkgout && makepkg -s"
 
       - uses: actions/upload-artifact@v2
         with:
