--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           pacman-key --init
           pacman --noconfirm -Sy archlinux-keyring base-devel fakeroot
-          chown nobody:nobody "/__w/holoiso_install_main/holoiso_install_main"
+          chown -R nobody:nobody "/__w/holoiso_install_main/holoiso_install_main"
           
       - name: Build ISO File
         run: |
