--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -16,7 +16,7 @@ jobs:
         run: |
           pacman-key --init
           pacman --noconfirm -Sy archlinux-keyring base-devel fakeroot dos2unix wget
-          dos2unix * 
+          find . -type f -print0 | xargs -0 dos2unix
           chown -R nobody:nobody .
           
       - name: Build Arch package
