Snapshot builder: Switch to new CDN

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -25,14 +25,14 @@ jobs:
           
       - name: Add to arch repository
         run: |
-          su -s /bin/bash nobody -c "wget https://vakdl.enablers.workers.dev/6:/holoiso/os/x86_64/holoiso.db -P pkgout"
-          su -s /bin/bash nobody -c "wget https://vakdl.enablers.workers.dev/6:/holoiso/os/x86_64/holoiso.db.tar.gz -P pkgout"
-          su -s /bin/bash nobody -c "wget https://vakdl.enablers.workers.dev/6:/holoiso/os/x86_64/holoiso.db.tar.gz.old -P pkgout"
-          su -s /bin/bash nobody -c "wget https://vakdl.enablers.workers.dev/6:/holoiso/os/x86_64/holoiso.db.tar.xz -P pkgout"
-          su -s /bin/bash nobody -c "wget https://vakdl.enablers.workers.dev/6:/holoiso/os/x86_64/holoiso.files -P pkgout"
-          su -s /bin/bash nobody -c "wget https://vakdl.enablers.workers.dev/6:/holoiso/os/x86_64/holoiso.files.tar.gz -P pkgout"
-          su -s /bin/bash nobody -c "wget https://vakdl.enablers.workers.dev/6:/holoiso/os/x86_64/holoiso.files.tar.gz.old -P pkgout"
-          su -s /bin/bash nobody -c "wget https://vakdl.enablers.workers.dev/6:/holoiso/os/x86_64/holoiso.files.tar.xz -P pkgout"
+          su -s /bin/bash nobody -c "wget http://dl.thevakhovske.pw/pacman/holoiso/os/x86_64/holoiso.db -P pkgout"
+          su -s /bin/bash nobody -c "wget http://dl.thevakhovske.pw/pacman/holoiso/os/x86_64/holoiso.db.tar.gz -P pkgout"
+          su -s /bin/bash nobody -c "wget http://dl.thevakhovske.pw/pacman/holoiso/os/x86_64/holoiso.db.tar.gz.old -P pkgout"
+          su -s /bin/bash nobody -c "wget http://dl.thevakhovske.pw/pacman/holoiso/os/x86_64/holoiso.db.tar.xz -P pkgout"
+          su -s /bin/bash nobody -c "wget http://dl.thevakhovske.pw/pacman/holoiso/os/x86_64/holoiso.files -P pkgout"
+          su -s /bin/bash nobody -c "wget http://dl.thevakhovske.pw/pacman/holoiso/os/x86_64/holoiso.files.tar.gz -P pkgout"
+          su -s /bin/bash nobody -c "wget http://dl.thevakhovske.pw/pacman/holoiso/os/x86_64/holoiso.files.tar.gz.old -P pkgout"
+          su -s /bin/bash nobody -c "wget http://dl.thevakhovske.pw/pacman/holoiso/os/x86_64/holoiso.files.tar.xz -P pkgout"
           su -s /bin/bash nobody -c "repo-add pkgout/holoiso.db.tar.gz pkgout/*.tar.zst"
 
       - uses: actions/upload-artifact@v2
