Snapshot: do NOT ignore MESA and Gamescope

--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg = gamescope lib32-mesa mesa jupiter-hw-support linux-firmware linux-firmware-neptune linux-firmware-neptune-rtw-debug grub
+IgnorePkg = jupiter-hw-support linux-firmware linux-firmware-neptune linux-firmware-neptune-rtw-debug grub
 #IgnoreGroup =
 
 #NoUpgrade   =
