--- a/src/steamos-gamemode.desktop
+++ b/src/steamos-gamemode.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Comment[en_US]=
 Comment=
-Exec=steamos-session-select
+Exec=qdbus org.kde.Shutdown /Shutdown org.kde.Shutdown.logout
 GenericName[en_US]=
 GenericName=
 Icon=steamdeck-gaming-return
