Snapshot: Use multiple CDNs

--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -74,11 +74,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso]
-Server = http://dl.thevakhovske.pw/pacman/$repo/os/$arch
+Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
 [holostaging]
-Server = http://dl.thevakhovske.pw/pacman/$repo/os/$arch
+Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
 [jupiter-main]
