Installer: nananananna we fucked up

--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -74,11 +74,13 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso]
-Include = /etc/pacman.d/mirrorlist
+Server = http://dlcdn2.thevakhovske.pw/$repo/os/$arch
+Server = http://dl.thevakhovske.pw/$repo/os/$arch
 SigLevel = Never
 
 [holostaging]
-Include = /etc/pacman.d/mirrorlist
+Server = http://dlcdn2.thevakhovske.pw/$repo/os/$arch
+Server = http://dl.thevakhovske.pw/$repo/os/$arch
 SigLevel = Never
 
 [jupiter-main]
