Snapshot: Please don't die

--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -74,13 +74,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso]
-Server = http://dlcdn2.thevakhovske.pw/$repo/os/$arch
-Server = http://dl.thevakhovske.pw/$repo/os/$arch
+Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
 [holostaging]
-Server = http://dlcdn2.thevakhovske.pw/$repo/os/$arch
-Server = http://dl.thevakhovske.pw/$repo/os/$arch
+Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
 [jupiter-main]
