--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -70,7 +70,7 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#[testing]
+#[testing-main]
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso]
@@ -85,23 +85,23 @@ SigLevel = Never
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[holo]
+[holo-main]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[core]
+[core-main]
 Include = /etc/pacman.d/mirrorlist
 
-[extra]
+[extra-main]
 Include = /etc/pacman.d/mirrorlist
 
-#[community-testing]
+#[community-testing-main]
 #Include = /etc/pacman.d/mirrorlist
 
-[community]
+[community-main]
 Include = /etc/pacman.d/mirrorlist
 
-[multilib]
+[multilib-main]
 Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
