--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg = jupiter-hw-support linux-firmware linux-firmware-neptune linux-firmware-neptune-rtw-debug grub
+IgnorePkg = jupiter-hw-support linux-firmware-neptune linux-firmware-neptune-rtw-debug
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -70,10 +70,10 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#[testing-main]
+#[testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[holoiso]
+[holoiso-stable]
 Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
@@ -81,27 +81,27 @@ SigLevel = Never
 Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
-[jupiter-main]
+[jupiter]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[holo-main]
+[holo]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[core-main]
+[core]
 Include = /etc/pacman.d/mirrorlist
 
-[extra-main]
+[extra]
 Include = /etc/pacman.d/mirrorlist
 
-#[community-testing-main]
+#[community-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[community-main]
+[community]
 Include = /etc/pacman.d/mirrorlist
 
-[multilib-main]
+[multilib]
 Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
