Ignore signatures for some apps

--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -91,18 +91,22 @@ SigLevel = Never
 
 [core]
 Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
 
 [extra]
 Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
 
 #[community-testing]
 #Include = /etc/pacman.d/mirrorlist
 
 [community]
 Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
 
 [multilib]
 Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
