--- a/src/beta_pacman.conf
+++ b/src/beta_pacman.conf
@@ -73,35 +73,35 @@ LocalFileSigLevel = Optional
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[holoiso-beta]
-Server = http://dl.thevakhovske.pw/pacman/$repo/os/$arch
+[holoiso-next]
+Server = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
 [holostaging]
-Server = http://dl.thevakhovske.pw/pacman/$repo/os/$arch
+Server = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
 [jupiter-main]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[holo]
+[holo-main]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[core]
+[core-main]
 Include = /etc/pacman.d/mirrorlist
 
-[extra]
+[extra-main]
 Include = /etc/pacman.d/mirrorlist
 
-#[community-testing]
+#[community-testing-main]
 #Include = /etc/pacman.d/mirrorlist
 
-[community]
+[community-main]
 Include = /etc/pacman.d/mirrorlist
 
-[multilib]
+[multilib-main]
 Include = /etc/pacman.d/mirrorlist
 
 # An example of a custom package repository.  See the pacman manpage for
