Enable beta selectors

--- a/src/beta_pacman.conf
+++ b/src/beta_pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg = gamescope lib32-mesa mesa linux-firmware linux-firmware-neptune linux-firmware-neptune-rtw-debug grub
+IgnorePkg = jupiter-hw-support linux-firmware-neptune linux-firmware-neptune-rtw-debug
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -74,11 +74,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso-next]
-Server = /etc/pacman.d/holo_mirrorlist
+Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
 [holostaging]
-Server = /etc/pacman.d/holo_mirrorlist
+Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
 [jupiter-main]
