--- a/src/stable_pacman.conf
+++ b/src/stable_pacman.conf
@@ -22,7 +22,7 @@ HoldPkg     = pacman glibc
 Architecture = auto
 
 # Pacman won't upgrade packages listed in IgnorePkg and members of IgnoreGroup
-IgnorePkg = gamescope lib32-mesa mesa linux-firmware linux-firmware-neptune linux-firmware-neptune-rtw-debug grub
+IgnorePkg = jupiter-hw-support linux-firmware-neptune linux-firmware-neptune-rtw-debug
 #IgnoreGroup =
 
 #NoUpgrade   =
@@ -73,36 +73,40 @@ LocalFileSigLevel = Optional
 #[testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[holoiso-next]
-Server = /etc/pacman.d/holo_mirrorlist
+[holoiso-stable]
+Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
 [holostaging]
-Server = /etc/pacman.d/holo_mirrorlist
+Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
-[jupiter-main]
-Include = /etc/pacman.d/mirrorlist
-SigLevel = Never
-
-[holo-main]
+[jupiter]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[core-main]
+[holo]
 Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
 
-[extra-main]
+[core]
 Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
 
-#[community-testing-main]
+[extra]
+Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
+
+#[community-testing]
 #Include = /etc/pacman.d/mirrorlist
 
-[community-main]
+[community]
 Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
 
-[multilib-main]
+[multilib]
 Include = /etc/pacman.d/mirrorlist
+SigLevel = Never
 
 # An example of a custom package repository.  See the pacman manpage for
 # tips on creating your own repositories.
