--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -70,7 +70,7 @@ LocalFileSigLevel = Optional
 # repo name header and Include lines. You can add preferred servers immediately
 # after the header, and they will be used before the default mirrors.
 
-#[testing]
+#[testing-rel]
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso-stable]
@@ -81,30 +81,30 @@ SigLevel = Never
 Include = /etc/pacman.d/holo_mirrorlist
 SigLevel = Never
 
-[jupiter]
+[jupiter-rel]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[holo]
+[holo-rel]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[core]
+[core-rel]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[extra]
+[extra-rel]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-#[community-testing]
+#[community-testing-rel]
 #Include = /etc/pacman.d/mirrorlist
 
-[community]
+[community-rel]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
-[multilib]
+[multilib-rel]
 Include = /etc/pacman.d/mirrorlist
 SigLevel = Never
 
