--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -2,6 +2,7 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
+# CONFIG_VERSION="1"
 
 #
 # GENERAL OPTIONS
