--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -2,7 +2,7 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
-
+# CONFIG_VERSION="2"
 #
 # GENERAL OPTIONS
 #
@@ -74,11 +74,15 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso-next]
-Include = /etc/pacman.d/holo_mirrorlist
+Server = http://thevakhovske.eu.org/$repo/os/$arch
+Server = http://cdn.holoiso.ru.eu.org/pkg/$repo/os/$arch
+Server = http://holoiso.itsvixano.me/$repo/os/$arch
 SigLevel = Never
 
 [holostaging]
-Include = /etc/pacman.d/holo_mirrorlist
+Server = http://thevakhovske.eu.org/$repo/os/$arch
+Server = http://cdn.holoiso.ru.eu.org/pkg/$repo/os/$arch
+Server = http://holoiso.itsvixano.me/$repo/os/$arch
 SigLevel = Never
 
 [jupiter-main]
