--- a/src/stable_pacman.conf
+++ b/src/stable_pacman.conf
@@ -2,7 +2,7 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
-# CONFIG_VERSION="1"
+# CONFIG_VERSION="3"
 
 #
 # GENERAL OPTIONS
@@ -75,11 +75,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso-stable]
-Include = /etc/pacman.d/holo_mirrorlist
+Server = https://cd2.holoiso.ru.eu.org/pkg/$repo/os/$arch
 SigLevel = Never
 
 [holostaging]
-Include = /etc/pacman.d/holo_mirrorlist
+Server = https://cd2.holoiso.ru.eu.org/pkg/$repo/os/$arch
 SigLevel = Never
 
 [jupiter-rel]
