--- a/src/pacman.conf
+++ b/src/pacman.conf
@@ -2,7 +2,7 @@
 # /etc/pacman.conf
 #
 # See the pacman.conf(5) manpage for option and repository directives
-# CONFIG_VERSION="2"
+# CONFIG_VERSION="3"
 #
 # GENERAL OPTIONS
 #
@@ -74,15 +74,11 @@ LocalFileSigLevel = Optional
 #Include = /etc/pacman.d/mirrorlist
 
 [holoiso-next]
-Server = http://thevakhovske.eu.org/$repo/os/$arch
-Server = http://cdn.holoiso.ru.eu.org/pkg/$repo/os/$arch
-Server = http://holoiso.itsvixano.me/$repo/os/$arch
+Server = https://cd2.holoiso.ru.eu.org/pkg/$repo/os/$arch
 SigLevel = Never
 
 [holostaging]
-Server = http://thevakhovske.eu.org/$repo/os/$arch
-Server = http://cdn.holoiso.ru.eu.org/pkg/$repo/os/$arch
-Server = http://holoiso.itsvixano.me/$repo/os/$arch
+Server = https://cd2.holoiso.ru.eu.org/pkg/$repo/os/$arch
 SigLevel = Never
 
 [jupiter-main]
